add in actions to take

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1405,7 +1405,57 @@
       "233.09 current close\n",
       "Creating ML models\n",
       " Lookback = 30_TCN Prediction = 267.633398125032\n",
-      " Lookback = 60_TCN Prediction = 257.4415485431873\n"
+      " Lookback = 60_TCN Prediction = 257.4415485431873\n",
+      " Lookback = 30_NBEATS Prediction = 308.8153355697136\n",
+      " Lookback = 60_NBEATS Prediction = 282.1691725448315\n",
+      "279.01486369569113 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-10 00:00:00 current date\n",
+      "250.337 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "247.52 current close\n",
+      "Creating ML models\n",
+      " Lookback = 30_TCN Prediction = 272.7410012784414\n",
+      " Lookback = 60_TCN Prediction = 266.601706396285\n",
+      " Lookback = 30_NBEATS Prediction = 317.79083898286376\n",
+      " Lookback = 60_NBEATS Prediction = 280.3858155688775\n",
+      "284.3798405566169 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-11 00:00:00 current date\n",
+      "248.37600000000003 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "245.78 current close\n",
+      "Creating ML models\n",
+      " Lookback = 30_TCN Prediction = 274.54706159604314\n",
+      " Lookback = 60_TCN Prediction = 266.2007406134455\n",
+      " Lookback = 30_NBEATS Prediction = 318.43326007059784\n",
+      " Lookback = 60_NBEATS Prediction = 285.29510893397725\n",
+      "286.1190428035159 ml_pred\n",
+      "Updating stop loss to 234.80999999999997\n",
+      "260.9 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-12 00:00:00 current date\n",
+      "247.44300000000004 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "260.9 current close\n",
+      "Creating ML models\n",
+      " Lookback = 30_TCN Prediction = 285.7255612519347\n",
+      " Lookback = 60_TCN Prediction = 279.236510042253\n",
+      " Lookback = 30_NBEATS Prediction = 324.54974678126865\n",
+      " Lookback = 60_NBEATS Prediction = 282.44587919156857\n",
+      "292.98942431675624 ml_pred\n",
+      "Updating stop loss to 237.68099999999998\n",
+      "264.09 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-14 00:00:00 current date\n",
+      "250.07399999999998 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "264.09 current close\n",
+      "Creating ML models\n"
      ]
     }
    ],
