--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2,17 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "51b56636-6aec-4275-a855-237dd410abff",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Importing plotly failed. Interactive plots will not work.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -65,6 +58,16 @@
     "logging.disable(logging.CRITICAL)\n",
     "from collections import defaultdict\n",
     "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2adc2120-d764-4f20-8aa4-e9c416cc3478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NBEATSModelEATSModel("
    ]
   },
   {
@@ -2250,7 +2253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "N\n"
    ]
   },
   {
