--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "id": "fd1fe545-55c7-4533-b893-8569688bc83a",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1125,7 @@
     "                # return \"Error. More than one time series for _add_additional_training_dfs not implemented\"\n",
     "        return additional_ts_transformers, all_ts_stacked_series\n",
     "    \n",
-    "    def _check_ml_prediction(self, end_time,   tcn_first_epochs=50, tcn_sub_epochs=50, nbeats_first_epochs=5,\n",
+    "    def _check_ml_prediction(self, end_time,   tcn_first_epochs=30, tcn_sub_epochs=30, nbeats_first_epochs=5,\n",
     "                             nbeats_sub_epochs=5,\n",
     "                             verbose = False) -> float:\n",
     "        \"\"\"train ML model to predict price movement over the last self.ml_lookback_windows days \n",
@@ -1714,7 +1714,19 @@
       "2019-04-25 00:00:00 current date\n",
       "154.46 close\n",
       "Creating ML models\n",
-      "1 LEN additional_dfs_sliced\n"
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 143.00030213985303\n",
+      " Lookback = 30_TCN Prediction = 166.09090097432195\n",
+      " Lookback = 15_NBEATS Prediction = 163.44787010493548\n",
+      " Lookback = 30_NBEATS Prediction = 176.18828659579168\n",
+      "162.18183995372553 ml prediction day\n",
+      "168.95 mean\n",
+      "Eval buy took 3.4507978836695354 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-06-04 00:00:00 current date\n",
+      "241.34 close\n",
+      "Creating ML models\n"
      ]
     }
    ],
