write to logs file

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -764,10 +764,10 @@
        "               '2017-01-07', '2017-01-08', '2017-01-09', '2017-01-10',\n",
        "               '2017-01-11', '2017-01-12',\n",
        "               ...\n",
-       "               '2021-10-08', '2021-10-09', '2021-10-10', '2021-10-11',\n",
-       "               '2021-10-12', '2021-10-13', '2021-10-14', '2021-10-15',\n",
-       "               '2021-10-16', '2021-10-17'],\n",
-       "              dtype='datetime64[ns]', length=1749, freq='D')"
+       "               '2021-10-09', '2021-10-10', '2021-10-11', '2021-10-12',\n",
+       "               '2021-10-13', '2021-10-14', '2021-10-15', '2021-10-16',\n",
+       "               '2021-10-17', '2021-10-18'],\n",
+       "              dtype='datetime64[ns]', length=1750, freq='D')"
       ]
      },
      "execution_count": 12,
@@ -893,14 +893,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-10-13</th>\n",
-       "      <td>430.24</td>\n",
-       "      <td>435.49</td>\n",
-       "      <td>429.3900</td>\n",
-       "      <td>433.10</td>\n",
-       "      <td>90682520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2021-10-14</th>\n",
        "      <td>430.24</td>\n",
        "      <td>435.49</td>\n",
@@ -932,9 +924,17 @@
        "      <td>433.10</td>\n",
        "      <td>90682520</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-18</th>\n",
+       "      <td>430.24</td>\n",
+       "      <td>435.49</td>\n",
+       "      <td>429.3900</td>\n",
+       "      <td>433.10</td>\n",
+       "      <td>90682520</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1749 rows × 5 columns</p>\n",
+       "<p>1750 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -946,13 +946,13 @@
        "2017-01-06  226.53  227.75  225.9000  227.21  71356460\n",
        "2017-01-07  226.53  227.75  225.9000  227.21  71356460\n",
        "...            ...     ...       ...     ...       ...\n",
-       "2021-10-13  430.24  435.49  429.3900  433.10  90682520\n",
        "2021-10-14  430.24  435.49  429.3900  433.10  90682520\n",
        "2021-10-15  430.24  435.49  429.3900  433.10  90682520\n",
        "2021-10-16  430.24  435.49  429.3900  433.10  90682520\n",
        "2021-10-17  430.24  435.49  429.3900  433.10  90682520\n",
+       "2021-10-18  430.24  435.49  429.3900  433.10  90682520\n",
        "\n",
-       "[1749 rows x 5 columns]"
+       "[1750 rows x 5 columns]"
       ]
      },
      "execution_count": 15,
@@ -1708,28 +1708,171 @@
      "text": [
       "----------\n",
       "buy\n",
-      "2017-04-03 00:00:00 current date\n",
-      "44.36 close\n",
+      "2019-04-25 00:00:00 current date\n",
+      "154.46 close\n",
       "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n",
-      " Lookback = 15_TCN Prediction = 91.5349526267031\n",
-      " Lookback = 30_TCN Prediction = 76.32822498656775\n",
-      " Lookback = 15_NBEATS Prediction = 100.49061311217483\n",
-      " Lookback = 30_NBEATS Prediction = 85.3682846596446\n",
-      "88.43051884627258 ml prediction day\n",
-      "50.14 mean\n",
+      " Lookback = 15_TCN Prediction = 143.09406198754732\n",
+      " Lookback = 30_TCN Prediction = 166.02486005554994\n",
+      " Lookback = 15_NBEATS Prediction = 163.62723750350435\n",
+      " Lookback = 30_NBEATS Prediction = 176.1845997767468\n",
+      "162.2326898308371 ml prediction day\n",
+      "168.95 mean\n",
+      "Eval buy took 3.9348501841227215 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-06-04 00:00:00 current date\n",
+      "241.34 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 287.0966125520479\n",
+      " Lookback = 30_TCN Prediction = 282.21937560781026\n",
+      " Lookback = 15_NBEATS Prediction = 267.54989035375013\n",
+      " Lookback = 30_NBEATS Prediction = 294.3679489268661\n",
+      "282.80845686011855 ml prediction day\n",
+      "263.47 mean\n",
       "ml pred higher than mean taking position\n",
-      "Eval buy took 3.705939718087514 minutes\n",
-      "Updating stop loss to 40.176\n",
-      "44.64 row close\n",
-      "Updating stop loss to 40.769999999999996\n",
-      "45.3 row close\n",
+      "Eval buy took 3.254872131347656 minutes\n",
+      "Updating stop loss to 222.34500000000003\n",
+      "247.05 row close\n",
+      "Updating stop loss to 224.523\n",
+      "249.47 row close\n",
+      "Updating stop loss to 225.83700000000002\n",
+      "250.93 row close\n",
+      "Updating stop loss to 234.80999999999997\n",
+      "260.9 row close\n",
+      "Updating stop loss to 237.68099999999998\n",
+      "264.09 row close\n",
+      "Updating stop loss to 242.118\n",
+      "269.02 row close\n",
+      "Updating stop loss to 242.29800000000003\n",
+      "269.22 row close\n",
+      "Updating stop loss to 246.91500000000002\n",
+      "274.35 row close\n",
+      "Updating stop loss to 265.41900000000004\n",
+      "294.91 row close\n",
       "---------\n",
       "checking if we should get out of our buy position\n",
-      "2017-04-11 00:00:00 current date\n",
-      "44.288 mean\n",
-      "44.36 self.buy_entry_price\n",
-      "43.41 current close\n",
+      "2019-06-21 00:00:00 current date\n",
+      "269.48400000000004 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "294.91 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 303.82517967496676\n",
+      " Lookback = 30_TCN Prediction = 304.33870542062584\n",
+      " Lookback = 15_NBEATS Prediction = 330.579289215948\n",
+      " Lookback = 30_NBEATS Prediction = 328.08794545811776\n",
+      "316.70777994241456 ml_pred\n",
+      "Updating stop loss to 278.442\n",
+      "309.38 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-22 00:00:00 current date\n",
+      "274.332 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "309.38 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 314.195063066035\n",
+      " Lookback = 30_TCN Prediction = 329.30589114382065\n",
+      " Lookback = 15_NBEATS Prediction = 308.3411145359192\n",
+      " Lookback = 30_NBEATS Prediction = 330.3924698306011\n",
+      "320.558634644094 ml_pred\n",
+      "Updating stop loss to 279.37800000000004\n",
+      "310.42 row close\n",
+      "Updating stop loss to 286.317\n",
+      "318.13 row close\n",
+      "Updating stop loss to 303.075\n",
+      "336.75 row close\n",
+      "----\n",
+      "stop loss activated for getting out of our buy\n",
+      "2019-06-27 00:00:00 current date\n",
+      "294.27 row close\n",
+      "303.075 self.stop_loss_price\n",
+      "241.34 self.buy_entry_price\n",
+      "Won 52.92999999999998 on this trade\n",
+      "23 days in trade\n",
+      "Average days in trades = 23.0\n",
+      "Bat rate buy so far = 1.0\n",
+      "Win rate buy so far = 1.0\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 0, 'n_short_won': 0, 'n_buy_won': 1, '$_short_lost': 0, '$_buy_lost': 0, '$_short_won': 0, '$_buy_won': 52.92999999999998}\n",
+      "Total days in trades = 23\n",
+      "----------\n",
+      "buy\n",
+      "2019-07-14 00:00:00 current date\n",
+      "227.58 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 257.4056121087034\n",
+      " Lookback = 30_TCN Prediction = 291.5073184980836\n",
+      " Lookback = 15_NBEATS Prediction = 368.0431645703028\n",
+      " Lookback = 30_NBEATS Prediction = 318.3454344359392\n",
+      "308.8253824032572 ml prediction day\n",
+      "283.53999999999996 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 3.107371950149536 minutes\n",
+      "Updating stop loss to 206.802\n",
+      "229.78 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-07-15 00:00:00 current date\n",
+      "277.71799999999996 mean\n",
+      "227.58 self.buy_entry_price\n",
+      "229.78 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 264.2842203687387\n",
+      " Lookback = 30_TCN Prediction = 281.45323263023863\n",
+      " Lookback = 15_NBEATS Prediction = 341.51264560905884\n",
+      " Lookback = 30_NBEATS Prediction = 320.63126201547544\n",
+      "301.9703401558779 ml_pred\n",
+      "----\n",
+      "stop loss activated for getting out of our buy\n",
+      "2019-07-16 00:00:00 current date\n",
+      "199.19 row close\n",
+      "206.802 self.stop_loss_price\n",
+      "227.58 self.buy_entry_price\n",
+      "Lost 28.390000000000015 on this trade\n",
+      "2 days in trade\n",
+      "Average days in trades = 12.5\n",
+      "Bat rate buy so far = 0.5\n",
+      "Win rate buy so far = 0.6508853910477125\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 1, 'n_short_won': 0, 'n_buy_won': 1, '$_short_lost': 0, '$_buy_lost': 28.390000000000015, '$_short_won': 0, '$_buy_won': 52.92999999999998}\n",
+      "Total days in trades = 25\n",
+      "----------\n",
+      "buy\n",
+      "2019-08-14 00:00:00 current date\n",
+      "186.61 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 197.3831045086973\n",
+      " Lookback = 30_TCN Prediction = 198.44173142153173\n",
+      " Lookback = 15_NBEATS Prediction = 190.18406785894197\n",
+      " Lookback = 30_NBEATS Prediction = 220.23187233395709\n",
+      "201.56019403078201 ml prediction day\n",
+      "214.74899999999997 mean\n",
+      "Eval buy took 3.403720164299011 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-08-28 00:00:00 current date\n",
+      "173.89 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 184.81161610241796\n",
+      " Lookback = 30_TCN Prediction = 187.58850509957188\n",
+      " Lookback = 15_NBEATS Prediction = 190.93800401472467\n",
+      " Lookback = 30_NBEATS Prediction = 199.1982052994009\n",
+      "190.63408262902885 ml prediction day\n",
+      "190.106 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 3.2516998052597046 minutes\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-08-29 00:00:00 current date\n",
+      "186.749 mean\n",
+      "173.89 self.buy_entry_price\n",
+      "169.52 current close\n",
       "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
@@ -1740,7 +1883,7 @@
     "simulator = BollingerBandsSimulator(\n",
     "    \"eth\",\n",
     "    etherum_df,  \n",
-    "    from_date=\"2010-1-01\", \n",
+    "    from_date=\"2019-1-01\", \n",
     "    period=\"24H\", \n",
     "    window=10, \n",
     "    no_of_std=2,\n",
