--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1874,6 +1874,172 @@
       "173.89 self.buy_entry_price\n",
       "169.52 current close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 169.3211777788426\n",
+      " Lookback = 30_TCN Prediction = 172.4561110010877\n",
+      " Lookback = 15_NBEATS Prediction = 186.01001067219124\n",
+      " Lookback = 30_NBEATS Prediction = 171.61814996150298\n",
+      "174.8513623534061 ml_pred\n",
+      "buy_to_no_position\n",
+      "Lost 4.369999999999976 on this trade\n",
+      "1 days in trade\n",
+      "Average days in trades = 8.666666666666666\n",
+      "Bat rate buy so far = 0.3333333333333333\n",
+      "Win rate buy so far = 0.6176916793091376\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 2, 'n_short_won': 0, 'n_buy_won': 1, '$_short_lost': 0, '$_buy_lost': 32.75999999999999, '$_short_won': 0, '$_buy_won': 52.92999999999998}\n",
+      "Total days in trades = 26\n",
+      "----------\n",
+      "buy\n",
+      "2019-09-24 00:00:00 current date\n",
+      "168.11 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 174.3309499208799\n",
+      " Lookback = 30_TCN Prediction = 171.63595071762788\n",
+      " Lookback = 15_NBEATS Prediction = 206.77562742857148\n",
+      " Lookback = 30_NBEATS Prediction = 213.15357865871633\n",
+      "191.47402668144892 ml prediction day\n",
+      "204.333 mean\n",
+      "Eval buy took 3.729147720336914 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-10-23 00:00:00 current date\n",
+      "162.4 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 171.29059378266538\n",
+      " Lookback = 30_TCN Prediction = 162.9001848963337\n",
+      " Lookback = 15_NBEATS Prediction = 189.5186702733832\n",
+      " Lookback = 30_NBEATS Prediction = 179.22162845849428\n",
+      "175.73276935271915 ml prediction day\n",
+      "175.40900000000002 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 3.615472451845805 minutes\n",
+      "Updating stop loss to 163.36800000000002\n",
+      "181.52 row close\n",
+      "Updating stop loss to 165.816\n",
+      "184.24 row close\n",
+      "Updating stop loss to 171.306\n",
+      "190.34 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-11-03 00:00:00 current date\n",
+      "183.759 mean\n",
+      "162.4 self.buy_entry_price\n",
+      "182.43 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 184.13404776653675\n",
+      " Lookback = 30_TCN Prediction = 184.72013384368537\n",
+      " Lookback = 15_NBEATS Prediction = 187.42160372450246\n",
+      " Lookback = 30_NBEATS Prediction = 180.08060447703429\n",
+      "184.0890974529397 ml_pred\n",
+      "Updating stop loss to 172.431\n",
+      "191.59 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-11-08 00:00:00 current date\n",
+      "185.84300000000002 mean\n",
+      "162.4 self.buy_entry_price\n",
+      "184.21 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 175.02973744800917\n",
+      " Lookback = 30_TCN Prediction = 179.71575748414483\n",
+      " Lookback = 15_NBEATS Prediction = 180.94799225388016\n",
+      " Lookback = 30_NBEATS Prediction = 214.11145943789165\n",
+      "187.45123665598146 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-11-09 00:00:00 current date\n",
+      "185.877 mean\n",
+      "162.4 self.buy_entry_price\n",
+      "185.03 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 182.35869316896094\n",
+      " Lookback = 30_TCN Prediction = 178.34107158506214\n",
+      " Lookback = 15_NBEATS Prediction = 195.78761337816113\n",
+      " Lookback = 30_NBEATS Prediction = 177.74513517588028\n",
+      "183.5581283270161 ml_pred\n",
+      "buy_to_no_position\n",
+      "Won 22.629999999999995 on this trade\n",
+      "17 days in trade\n",
+      "Average days in trades = 10.75\n",
+      "Bat rate buy so far = 0.5\n",
+      "Win rate buy so far = 0.697562776957164\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 2, 'n_short_won': 0, 'n_buy_won': 2, '$_short_lost': 0, '$_buy_lost': 32.75999999999999, '$_short_won': 0, '$_buy_won': 75.55999999999997}\n",
+      "Total days in trades = 43\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-21 00:00:00 current date\n",
+      "161.46 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 159.26626728504945\n",
+      " Lookback = 30_TCN Prediction = 155.52286725071463\n",
+      " Lookback = 15_NBEATS Prediction = 175.03949065448734\n",
+      " Lookback = 30_NBEATS Prediction = 181.93366187498592\n",
+      "167.94057176630935 ml prediction day\n",
+      "180.527 mean\n",
+      "Eval buy took 4.456566500663757 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-11 00:00:00 current date\n",
+      "143.61 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 142.72416690114372\n",
+      " Lookback = 30_TCN Prediction = 148.727623961783\n",
+      " Lookback = 15_NBEATS Prediction = 151.67339097295138\n",
+      " Lookback = 30_NBEATS Prediction = 124.57855163116211\n",
+      "141.92593336676006 ml prediction day\n",
+      "148.035 mean\n",
+      "Eval buy took 3.2310844818751017 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-16 00:00:00 current date\n",
+      "133.61 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 136.72914710856986\n",
+      " Lookback = 30_TCN Prediction = 130.97363186454865\n",
+      " Lookback = 15_NBEATS Prediction = 156.40756841880392\n",
+      " Lookback = 30_NBEATS Prediction = 145.53375337632886\n",
+      "142.41102519206282 ml prediction day\n",
+      "144.827 mean\n",
+      "Eval buy took 3.244438370068868 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-02-26 00:00:00 current date\n",
+      "225.68 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 244.99913520399812\n",
+      " Lookback = 30_TCN Prediction = 237.4133301483762\n",
+      " Lookback = 15_NBEATS Prediction = 262.4925417788737\n",
+      " Lookback = 30_NBEATS Prediction = 254.78998048821543\n",
+      "249.92374690486585 ml prediction day\n",
+      "260.64099999999996 mean\n",
+      "Eval buy took 3.492271379629771 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-03-08 00:00:00 current date\n",
+      "200.69 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 206.49772620915724\n",
+      " Lookback = 30_TCN Prediction = 214.5410927943075\n",
+      " Lookback = 15_NBEATS Prediction = 227.52041668013175\n",
+      " Lookback = 30_NBEATS Prediction = 210.70325657410984\n",
+      "214.81562306442657 ml prediction day\n",
+      "225.64899999999997 mean\n",
+      "Eval buy took 3.681277847290039 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-03-12 00:00:00 current date\n",
+      "112.35 close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
