--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1737,6 +1737,19 @@
       "2019-04-25 00:00:00 current date\n",
       "154.46 close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 143.00030213985303\n",
+      " Lookback = 30_TCN Prediction = 166.09090097432195\n",
+      " Lookback = 15_NBEATS Prediction = 163.44787010493548\n",
+      " Lookback = 30_NBEATS Prediction = 176.18828659579168\n",
+      "162.18183995372553 ml prediction day\n",
+      "168.95 mean\n",
+      "Eval buy took 2.64075661500295 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-06-04 00:00:00 current date\n",
+      "241.34 close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
