--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -500,22 +500,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-10-14</th>\n",
-       "      <td>430.24</td>\n",
-       "      <td>435.49</td>\n",
-       "      <td>429.3900</td>\n",
-       "      <td>433.10</td>\n",
-       "      <td>90682520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-10-15</th>\n",
-       "      <td>430.24</td>\n",
-       "      <td>435.49</td>\n",
-       "      <td>429.3900</td>\n",
-       "      <td>433.10</td>\n",
-       "      <td>90682520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2021-10-16</th>\n",
        "      <td>430.24</td>\n",
        "      <td>435.49</td>\n",
@@ -539,9 +523,25 @@
        "      <td>433.10</td>\n",
        "      <td>90682520</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-19</th>\n",
+       "      <td>430.24</td>\n",
+       "      <td>435.49</td>\n",
+       "      <td>429.3900</td>\n",
+       "      <td>433.10</td>\n",
+       "      <td>90682520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-20</th>\n",
+       "      <td>430.24</td>\n",
+       "      <td>435.49</td>\n",
+       "      <td>429.3900</td>\n",
+       "      <td>433.10</td>\n",
+       "      <td>90682520</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1750 rows × 5 columns</p>\n",
+       "<p>1752 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -553,13 +553,13 @@
        "2017-01-06  226.53  227.75  225.9000  227.21  71356460\n",
        "2017-01-07  226.53  227.75  225.9000  227.21  71356460\n",
        "...            ...     ...       ...     ...       ...\n",
-       "2021-10-14  430.24  435.49  429.3900  433.10  90682520\n",
-       "2021-10-15  430.24  435.49  429.3900  433.10  90682520\n",
        "2021-10-16  430.24  435.49  429.3900  433.10  90682520\n",
        "2021-10-17  430.24  435.49  429.3900  433.10  90682520\n",
        "2021-10-18  430.24  435.49  429.3900  433.10  90682520\n",
+       "2021-10-19  430.24  435.49  429.3900  433.10  90682520\n",
+       "2021-10-20  430.24  435.49  429.3900  433.10  90682520\n",
        "\n",
-       "[1750 rows x 5 columns]"
+       "[1752 rows x 5 columns]"
       ]
      },
      "execution_count": 35,
@@ -663,22 +663,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-10-14</th>\n",
-       "      <td>430.24</td>\n",
-       "      <td>435.49</td>\n",
-       "      <td>429.39</td>\n",
-       "      <td>433.10</td>\n",
-       "      <td>90682520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-10-15</th>\n",
-       "      <td>430.24</td>\n",
-       "      <td>435.49</td>\n",
-       "      <td>429.39</td>\n",
-       "      <td>433.10</td>\n",
-       "      <td>90682520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2021-10-16</th>\n",
        "      <td>430.24</td>\n",
        "      <td>435.49</td>\n",
@@ -702,9 +686,25 @@
        "      <td>433.10</td>\n",
        "      <td>90682520</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-19</th>\n",
+       "      <td>430.24</td>\n",
+       "      <td>435.49</td>\n",
+       "      <td>429.39</td>\n",
+       "      <td>433.10</td>\n",
+       "      <td>90682520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-20</th>\n",
+       "      <td>430.24</td>\n",
+       "      <td>435.49</td>\n",
+       "      <td>429.39</td>\n",
+       "      <td>433.10</td>\n",
+       "      <td>90682520</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1022 rows × 5 columns</p>\n",
+       "<p>1024 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -716,13 +716,13 @@
        "2019-01-04  247.59  253.11  247.17  252.39  142444500\n",
        "2019-01-05  247.59  253.11  247.17  252.39  142444500\n",
        "...            ...     ...     ...     ...        ...\n",
-       "2021-10-14  430.24  435.49  429.39  433.10   90682520\n",
-       "2021-10-15  430.24  435.49  429.39  433.10   90682520\n",
        "2021-10-16  430.24  435.49  429.39  433.10   90682520\n",
        "2021-10-17  430.24  435.49  429.39  433.10   90682520\n",
        "2021-10-18  430.24  435.49  429.39  433.10   90682520\n",
+       "2021-10-19  430.24  435.49  429.39  433.10   90682520\n",
+       "2021-10-20  430.24  435.49  429.39  433.10   90682520\n",
        "\n",
-       "[1022 rows x 5 columns]"
+       "[1024 rows x 5 columns]"
       ]
      },
      "execution_count": 36,
@@ -1633,7 +1633,8 @@
     "        input_df['relative_strength_index'] = 100 - (100 / (1 + input_df.window_gain / input_df.window_loss))\n",
     "        return input_df\n",
     "    \n",
-    "    def _build_macd_cols(self, input_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    @staticmethod    \n",
+    "    def _build_macd_cols( input_df: pd.DataFrame) -> pd.DataFrame:\n",
     "        \n",
     "        smothing_constant_12_period = 2/(12+1)\n",
     "        smothing_constant_26_period = 2/(26+1)\n",
@@ -1647,7 +1648,7 @@
     "        return input_df\n",
     "        \n",
     "        \n",
-    "                \n",
+    "   \n",
     "    def _build_bollinger_bands_rsi_macd_cols(self):\n",
     "        rolling_mean = self.df['close'].rolling(self.window).mean()\n",
     "        rolling_std = self.df['close'].rolling(self.window).std()\n",
@@ -1656,7 +1657,7 @@
     "        self.df['Bollinger High'] = rolling_mean + (rolling_std * self.no_of_std)\n",
     "        self.df['Bollinger Low'] = rolling_mean - (rolling_std * self.no_of_std)\n",
     "        ## add rsi\n",
-    "        self.df = self._build_rsi_col(self.df)\n",
+    "        self._build_rsi_col(self.df)\n",
     "        ## add MACD\n",
     "        self.df = self._build_macd_cols(self.df)\n",
     "        \n",
